--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,9 +33,9 @@
   </div>
 </section>
 
-<section class="section section_2">
+<section class="section section_2" id="section_2">
   <div id="about" class="col-12 container">
-    <h2 id="section_2">ABOUT</h2>
+    <h2>ABOUT</h2>
     <h1>What is <span>lo-ad ?</span></h1>
     <p class="lead">We started this <span>"lo-ad "</span> to provide the marketing and publishing needs of businesses <br/>under one roof.</p>
     <div class="main-content">
