some changes in ...
Assets and component created...

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 
+@font-face{
+  font-family: 'Avenir LT Stdx';
+  src: url('assets/fonts/avenir-lt-std-cufonfonts-webfont/AvenirLTStd-Light.woff') format('opentype');
+}
+
+@font-face{
+  font-family: 'Roboto Medium';
+  src: url('assets/fonts/Roboto/Roboto-Medium.ttf') format('opentype');
+}
+
 *, html {
   margin: 0;
   padding: 0;
