--- a/src/app/requirement-module/nav/nav.component.html
+++ b/src/app/requirement-module/nav/nav.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
   <div class="row _navbar">
     
-      <div class="_the_title" [routerLink]="['/landingPage']" routerLinkActive="router-link-active" >
+      <div class="_the_title" >
         Gurukul's Home Tutor
       </div>
 
@@ -24,3 +24,5 @@
 </div>
 
 <router-outlet></router-outlet>
+
+<!-- [routerLink]="['/landingPage']" routerLinkActive="router-link-active"  -->
